# myrtille

./: .gitignore  LICENSE  base.py  pyproject.toml
myrtille/lib/: cfg.py  db.py  util.py
myrtille/mysql/: generator.py  grammar.lark  parser.py  types.py
scripts/: export_schema_ddl.py
stubs/asyncmy/: __init__.pyi  auth.pyi  connection.pyi  contexts.pyi  cursor.pyi  optionfile.pyi  pool.pyi  structs.pyi
stubs/asyncmy/constants/: COLUMN.pyi  COMMAND.pyi  FIELD_TYPE.pyi
stubs/asyncmy/replication/: __init__.pyi  binlogstream.pyi  bitmap.pyi  column.pyi  constants.pyi  errors.pyi  events.pyi  gtid.pyi  packets.pyi  row_events.pyi  table.pyi  utils.pyi
tests/: all.py  parse_generate.py
tests/data/ddl/: airportdb.sql  employees.sql  menagerie.sql  mysql.sql  performance_schema.sql  sakila.sql  sys.sql  test.sql  world.sql
