[tool.poetry]
name = "myrtille"
version = "0.1.0"
description = ""
authors = ["Florian Daude <floriandaude@hotmail.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
asyncmy = "^0.2.8"
lark = "^1.1.8"
cryptography = "^41.0.5"


[tool.poetry.group.dev.dependencies]
rich = "^13.6.0"
black = "^23.10.1"
snakeviz = "^2.2.0"
typer = "^0.9.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
